--- a/spring-webflux/spring-webflux.gradle
+++ b/spring-webflux/spring-webflux.gradle
@@ -54,7 +54,7 @@ dependencies {
 	testCompile("org.eclipse.jetty:jetty-servlet")
 	testCompile("org.eclipse.jetty:jetty-reactive-httpclient:1.0.2")
 	testCompile("com.squareup.okhttp3:mockwebserver:3.13.1")
-	testCompile("org.jetbrains.kotlin:kotlin-script-runtime:${kotlinVersion}")
+	compile("org.jetbrains.kotlin:kotlin-script-runtime:${kotlinVersion}")
 	testRuntime("org.jetbrains.kotlin:kotlin-script-util:${kotlinVersion}")
 	testRuntime("org.jetbrains.kotlin:kotlin-compiler:${kotlinVersion}")
 	testRuntime("org.jruby:jruby:9.2.6.0")
