--- a/spring-context-support/spring-context-support.gradle
+++ b/spring-context-support/spring-context-support.gradle
@@ -4,7 +4,7 @@ dependencies {
 	compile(project(":spring-beans"))
 	compile(project(":spring-context"))
 	compile(project(":spring-core"))
-	optional(project(":spring-jdbc"))  // for Quartz support
+	compile(project(":spring-jdbc"))  // for Quartz support
 	optional(project(":spring-tx"))  // for Quartz support
 	optional("javax.activation:javax.activation-api:1.2.0")
 	optional("javax.mail:javax.mail-api:1.6.2")
