--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,10 @@ configure(allprojects) { project ->
 			freeCompilerArgs = ["-Xjsr305=strict"]
 		}
 	}
+	tasks.withType(JavaCompile) {
+		options.encoding = "UTF-8"
+	}
+
 
 	test {
 		systemProperty("java.awt.headless", "true")
